--- a/components/detail-cart.css
+++ b/components/detail-cart.css
@@ -3,6 +3,10 @@
   top: 0;
 }
 
+.detail-cart-container .box {
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+}
+
 .detail-cart-container .cart-button {
   background-color: #ff3860;
   color: white;
