Working checkout ui

--- a/components/detail-cart.css
+++ b/components/detail-cart.css
@@ -26,9 +26,9 @@
   font-family: "Quicksand", sans-serif;
 }
 
-.detail-cart-container .ui.segment {
+/* .detail-cart-container .ui.segment {
   border-top: 4px solid #ff3860;
-}
+} */
 
 .detail-cart-container .fw7 {
   font-weight: 700;
