--- a/components/popular.css
+++ b/components/popular.css
@@ -27,6 +27,7 @@
   font-size: 1.2em;
   font-weight: 700;
   font-family: "Quicksand", sans-serif;
+  background-color:rgba(0, 0, 0, 0.4);
 }
 
 .t1 {
