--- a/components/trending.css
+++ b/components/trending.css
@@ -80,6 +80,10 @@
   margin-bottom: 1em;
 }
 
+ /* .trending-container .slick-slide {margin-left:0px}  */
+
+ .trending-container .slick-list { padding-left: 0.3em;}
+ 
 .ribbon {
   width: 140px;
   height: 210px;
