--- a/components/popular.css
+++ b/components/popular.css
@@ -27,8 +27,13 @@
   font-size: 1.2em;
   font-weight: 700;
   font-family: "Quicksand", sans-serif;
-  background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  bottom: 8px;
 }
+
+/* .tiletext:hover {
+  background-color: black;
+} */
 
 .t1 {
   width: 250px;
