--- a/components/header.css
+++ b/components/header.css
@@ -27,6 +27,10 @@
   cursor: pointer;
 }
 
-.navbar-item {
+.header-container .navbar-item {
   padding: 0.5rem 0.3rem;
+}
+
+.header-container .navbar-item img {
+  max-height: 3rem;
 }
