--- a/components/popular.css
+++ b/components/popular.css
@@ -69,6 +69,7 @@
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .t2 {
@@ -88,6 +89,7 @@
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .t3 {
@@ -107,6 +109,7 @@
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .t4 {
@@ -124,6 +127,7 @@
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .t5 {
@@ -141,6 +145,7 @@
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .t6 {
@@ -158,6 +163,7 @@
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .t7 {
@@ -175,6 +181,7 @@
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .t8 {
@@ -192,6 +199,7 @@
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   transform: scale(1.1);
+  cursor: pointer;
 }
 
 .popular-header-container {
