--- a/components/collection.css
+++ b/components/collection.css
@@ -1,4 +1,4 @@
-.box {
+.box-even {
   /* width: 1200px; */
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
@@ -7,11 +7,11 @@
   box-shadow: none;
 }
 
-.box:hover {
+.box-even:hover {
   cursor: pointer;
 }
 
-.box .card {
+.box-even .card {
   position: relative;
   width: 230px;
   height: 230px;
@@ -21,8 +21,8 @@
   /* border-radius: 4px; */
   /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
 }
-.box .card:before,
-.box .card:after {
+.box-even .card:before,
+.box-even .card:after {
   content: "";
   position: absolute;
   top: 0;
@@ -34,15 +34,15 @@
   transition: 0.5s;
   z-index: -1;
 }
-.box .card:hover:before {
+.box-even .card:hover:before {
   transform: rotate(20deg);
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 }
-.box .card:hover:after {
+.box-even .card:hover:after {
   transform: rotate(10deg);
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 }
-.box .card .imgBx {
+.box-even .card .imgBx {
   position: absolute;
   top: 1px;
   left: 2px;
@@ -53,11 +53,11 @@
   z-index: 1;
 }
 
-.box .card:hover .imgBx {
+.box-even .card:hover .imgBx {
   bottom: 80px;
 }
 
-.box .card .imgBx img {
+.box-even .card .imgBx img {
   position: absolute;
   top: 0;
   left: 0;
@@ -66,7 +66,7 @@
   object-fit: cover;
 }
 
-.box .card .details {
+.box-even .card .details {
   position: absolute;
   left: 10px;
   right: 10px;
@@ -75,7 +75,7 @@
   text-align: center;
 }
 
-.box .card .details h2 {
+.box-even .card .details h2 {
   margin: 0;
   padding: 0;
   font-weight: 200;
@@ -85,7 +85,7 @@
   text-transform: uppercase;
 }
 
-.box .card .details h2 span {
+.box-even .card .details h2 span {
   /* font-weight: 500; */
   font-size: 16px;
   color: #f38695;
@@ -114,4 +114,9 @@
   font-size: 1.5em;
   font-family: "Quicksand", sans-serif;
   font-weight: 200;
+}
+
+.card {
+  width: 250px;
+  height: 210px;
 }
