--- a/components/trending.css
+++ b/components/trending.css
@@ -57,7 +57,7 @@
 
 .trending-container .city-title {
   text-transform: uppercase;
-  color: #9a9a9a;
+  /* color: #9a9a9a; */
   /* margin-top: 0.5em;
   margin-bottom: 0.2em; */
   font-weight: 500;
@@ -70,7 +70,7 @@
 .trending-container .product-title {
   line-height: 1.5;
   font-size: 0.9em !important;
-  color: #545454;
+  color: black;
   font-family: "Quicksand", sans-serif;
   text-decoration: none;
   display: inline-block;
