Homescreen ui improvement working

--- a/components/slidder.css
+++ b/components/slidder.css
@@ -1,5 +1,5 @@
 .hero .carousel {
-  /* height: 400px; */
+  height: 400px;
   /* object-fit: cover */
   background-repeat: no-repeat;
   background-size: auto;
