--- a/components/popular.css
+++ b/components/popular.css
@@ -17,35 +17,33 @@
 }
 
 .tiletext {
-  padding: 5px;
   vertical-align: middle;
   text-align: center;
   color: white;
   margin-top: 190px;
-  -webkit-text-stroke: 0.01em #989090;
-  text-stroke: 0.01em #989090;
+  -webkit-text-stroke: 0.01em white;
+  text-stroke: 0.01em white;
   font-size: 1.2em;
   font-weight: 700;
   font-family: "Quicksand", sans-serif;
   position: absolute;
-  bottom: 8px;
+  bottom: 100px;
 }
 
 .tiletext-hover {
   cursor: pointer;
-  background-color: #989090;
-  padding: 5px;
+  background-color: white;
   vertical-align: middle;
   text-align: center;
-  color: white;
+  color: black;
   margin-top: 190px;
-  -webkit-text-stroke: 0.01em #989090;
-  text-stroke: 0.01em #989090;
+  -webkit-text-stroke: 0.01em white;
+  text-stroke: 0.01em white;
   font-size: 1.2em;
   font-weight: 700;
   font-family: "Quicksand", sans-serif;
   position: absolute;
-  bottom: 8px;
+  bottom: 100px;
 }
 
 /* .tiletext:hover {
