--- a/components/trending-list.css
+++ b/components/trending-list.css
@@ -57,14 +57,13 @@
 
 .trending-list-container .city-title {
   text-transform: uppercase;
-  color: #9a9a9a;
-  /* margin-top: 0.5em;
-  margin-bottom: 0.2em; */
-  font-weight: 500;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 200;
+  color: black;
   opacity: 0.7;
   text-decoration: none;
   pointer-events: none;
-  font-size: 1em;
+  font-size: 0.9em;
 }
 
 .trending-list-container .trending-list-header-container {
@@ -73,4 +72,8 @@
 
 .trending-list-container .slick-list {
   padding-left: 0.3em;
+}
+
+.trending-list-container .ui.card > .content {
+  padding: 1.5em;
 }
