--- a/components/main-list.css
+++ b/components/main-list.css
@@ -26,8 +26,14 @@
   color: #ff3860;
 }
 
+.main-list-container .mt0-5 {
+  margin-top: 0.5em;
+}
 .main-list-container .plh1 {
   line-height: 1.7em;
+}
+.main-list-container .lh1-5 {
+  line-height: 1.5em;
 }
 .main-list-container .mb8 {
   margin-bottom: 8px !important;
@@ -81,9 +87,10 @@
 .main-list-container .package-tags li {
   display: block;
   border-radius: 20px;
-  border: 1px solid #b2b2b2;
+  /* border: 1px solid #b2b2b2; 
+   color: #b2b2b2;  */
   font-size: 12px;
-  color: #b2b2b2;
+
   padding: 3px 10px;
   list-style: none;
   margin: 4px;
@@ -114,6 +121,10 @@
 
 .main-list-container .f24 {
   font-size: 24px;
+}
+
+.main-list-container .f20 {
+  font-size: 20px;
 }
 
 .main-list-container .flh28 {
