--- a/components/main-list.css
+++ b/components/main-list.css
@@ -339,3 +339,29 @@
 #child-list:hover {
   background-color: #f5f5f5;
 }
+
+#child-list:hover #li {
+  background-color: white;
+}
+
+.pr2:hover {
+  transform: scale(1.1);
+  -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(50%);
+}
+
+#img:hover {
+  transform: scale(1.1);
+  -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(50%);
+}
+
+#img {
+  margin-left: 2em;
+}
+
+#spa-img:hover {
+  transform: scale(1.1);
+  -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(50%);
+}
