--- a/components/main-list.css
+++ b/components/main-list.css
@@ -346,14 +346,10 @@
 
 .pr2:hover {
   transform: scale(1.1);
-  -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(50%);
 }
 
 #img:hover {
   transform: scale(1.1);
-  -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(50%);
 }
 
 #img {
@@ -362,6 +358,11 @@
 
 #spa-img:hover {
   transform: scale(1.1);
-  -webkit-filter: grayscale(50%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(50%);
+  /* -webkit-filter: grayscale(50%); 
+  filter: grayscale(50%); */
+}
+
+#escape-img {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
