Working detail ui improvement

--- a/components/food-event-list.css
+++ b/components/food-event-list.css
@@ -60,6 +60,10 @@
   font-size: 14px;
 }
 
+.food-event-list-container .lh1-7 {
+  line-height: 1.7em;
+}
+
 .ribbon {
   width: 140px;
   height: 200px;
