--- a/components/main-list.css
+++ b/components/main-list.css
@@ -332,8 +332,7 @@
 }
 
 .main-list-container .button:hover {
-  background-color: #f5f5f5;
-  color: black;
+  transform: scale(1.1);
 }
 
 #child-list:hover {
@@ -353,7 +352,7 @@
 }
 
 #img {
-  margin-left: 2em;
+  margin-left: 2.5em;
 }
 
 #spa-img:hover {
