--- a/components/main-list.css
+++ b/components/main-list.css
@@ -365,3 +365,7 @@
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
+
+.main-list-container .fs1-1 {
+  font-size: 1.1em;
+}
