--- a/components/main-list.css
+++ b/components/main-list.css
@@ -369,3 +369,11 @@
 .main-list-container .fs1-1 {
   font-size: 1.1em;
 }
+
+.main-list-container .fs1-4 {
+  font-size: 1.4em;
+}
+
+.main-list-container .padding1-4-1 {
+  padding: 1.4em 1em;
+}
