--- a/components/detail-slider.css
+++ b/components/detail-slider.css
@@ -1,11 +1,12 @@
-.hero .carousel {
-  /* background-size: cover; */
-  object-fit: cover;
-  height: 50vh;
+.detail-slider-container .hero .carousel {
+  height: 400px;
+  /* object-fit: cover */
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
-.hero .slick-list {
-  height: 50vh;
+.detail-slider-container .hero .slick-list {
+  height: 400px;
 }
 
 .detail-slider-container {
