--- a/components/collection.css
+++ b/components/collection.css
@@ -135,3 +135,7 @@
 .box-odd .ui.card > .content {
   padding-top: 1.5em;
 }
+
+.collection-container .box-odd .slick-list {
+  padding-left: 0.2em;
+}
