--- a/components/overview.css
+++ b/components/overview.css
@@ -194,3 +194,15 @@
 .overview-container .lh1-7 {
   line-height: 1.7em;
 }
+
+.overview-container .mb0-7 {
+  margin-bottom: 0.7em;
+}
+
+.overview-container .mt1 {
+  margin-top: 1em;
+}
+
+.overview-container .mt0-5 {
+  margin-top: 0.5em;
+}
