--- a/components/slidder-banner.css
+++ b/components/slidder-banner.css
@@ -1,10 +1,12 @@
 .slidder-banner-container .carousel {
-  height: 200px;
+  height: 170px;
+  background-repeat: no-repeat;
+  background-size: auto;
   /* object-fit: cover; */
 }
 
 .slidder-banner-container .slick-list {
-  height: 200px;
+  height: 170px;
 }
 
 .slidder-banner-container {
