Homescreen font-size change

--- a/components/discover.css
+++ b/components/discover.css
@@ -17,8 +17,8 @@
 }
 
 .discover-container .discover-header {
-  color: rgb(39, 37, 37);
-  font-size: 1.5em;
+  color: black;
+  font-size: 28px;
   font-family: "Quicksand", sans-serif;
   font-weight: 200;
 }
@@ -39,7 +39,7 @@
   height: 1px;
   display: block;
   box-sizing: border-box;
-  width: 5em;
+  width: 90px;
 }
 
 .discover-container .slick-track div {
