--- a/components/collection.css
+++ b/components/collection.css
@@ -84,7 +84,7 @@
   margin: 0;
   padding: 0;
   font-weight: 200;
-  font-size: 15px;
+  font-size: 20px;
   font-family: "Quicksand", sans-serif;
   color: black;
   text-transform: uppercase;
@@ -111,13 +111,13 @@
   height: 1px;
   display: block;
   box-sizing: border-box;
-  width: 4em;
+  width: 90px;
   margin-bottom: 1em;
 }
 
 .collection-header-container .collection-header {
-  color: rgb(39, 37, 37);
-  font-size: 1.5em;
+  color: black;
+  font-size: 28px;
   font-family: "Quicksand", sans-serif;
   font-weight: 200;
 }
