--- a/components/featured.css
+++ b/components/featured.css
@@ -32,8 +32,8 @@
 }
 
 .featured-container .featured-header-container .featured-header {
-  color: rgb(39, 37, 37);
-  font-size: 1.5em;
+  color: black;
+  font-size: 28px;
   font-family: "Quicksand", sans-serif;
   font-weight: 200;
 }
@@ -51,5 +51,5 @@
   height: 1px;
   display: block;
   box-sizing: border-box;
-  width: 5em;
+  width: 90px;
 }
