--- a/components/header.css
+++ b/components/header.css
@@ -41,8 +41,8 @@
 }
 
 .header-container .brand-title {
-  font-size: 1.3rem;
-  color: #463853;
+  font-size: 1.5rem;
+  color: black;
   transition-duration: 172ms;
   will-change: transform;
   font-family: "Quicksand", sans-serif;
@@ -55,4 +55,16 @@
   margin-right: 1rem;
   transition-duration: 172ms;
   will-change: width, height, margin-right;
+}
+
+.header-container .navbar-brand {
+  padding-top: 0.3em;
+}
+
+.header-container .brand {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  /* line-height: 1; */
 }
