--- a/components/main-list.css
+++ b/components/main-list.css
@@ -123,6 +123,9 @@
 .main-list-container .f20 {
   font-size: 20px;
 }
+.main-list-container .f17 {
+  font-size: 17px;
+}
 
 .main-list-container .flh28 {
   line-height: 28px;
@@ -188,11 +191,11 @@
 }
 
 .main-list-container .google {
-  color: #424242;
+  color: black;
   /* font-family: Google Sans; */
   /* font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif; */
   font-family: Lato, sans-serif !important;
-  font-size: 1.3rem;
+  font-size: 18px;
   font-weight: 500;
   letter-spacing: 0.0175rem;
 }
@@ -222,9 +225,9 @@
   position: absolute;
   display: block;
   width: 225px;
-  background-color: #ff3860;
+  background-color: #7fff00;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  color: #fff;
+  color: black;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   text-align: center;
   font-family: "Quicksand", sans-serif;
